--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/prekshabhalani/SpamShield-Authenticate#readme",
   "dependencies": {
     "bcrypt": "5.1.1",
+    "custom-env": "2.0.2",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "glob": "10.4.2",
     "jsonwebtoken": "9.0.2",
     "pg": "8.12.0",
     "pg-hstore": "2.3.4",
