🏗️ Made architectural changes
Update config file as per requirement only need one environment structure so no need for custom env

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 # Port where your application will run
-PORT= #Example: 9000
+SERVER_PORT= #Example: 9000
 
 # JWT secret for signing tokens
 JWT_SECRET=  # JWT secret to create token for authentication
