🗃️ Add Database ( Sequelize, Postgres)
Make connectivity with db ,
Write dynamic code for getting all model schema and set their relations as well,
Update credentials related to the db

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,14 @@
 # Port where your application will run
 SERVER_PORT= #Example: 9000
 
+
+# PostgreSQL database connection details
+DB_USER= # Database username
+DB_PASS= # Database password (leave empty if there is no password)
+DB_NAME= # Database name
+DB_HOST= # Database host (e.g., localhost, 127.0.0.1, or an IP address)
+DB_PORT= # Database port (default PostgreSQL port is 5432)
+
+
 # JWT secret for signing tokens
 JWT_SECRET=  # JWT secret to create token for authentication
