--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "custom-env": "2.0.2",
     "dotenv": "16.4.5",
     "express": "4.19.2",
+    "fs-extra": "11.2.0",
     "glob": "10.4.2",
     "jsonwebtoken": "9.0.2",
     "pg": "8.12.0",
