📝🔧💡 Update .env.sample with config variables

--- a/.env.sample
+++ b/.env.sample
@@ -8,7 +8,9 @@ DB_PASS= # Database password (leave empty if there is no password)
 DB_NAME= # Database name
 DB_HOST= # Database host (e.g., localhost, 127.0.0.1, or an IP address)
 DB_PORT= # Database port (default PostgreSQL port is 5432)
-
+DB_DIALECT= #Database dialect (e.g., postgres, postgresql)(default DB dialect is postgres )
+DB_ENABLE_SSL= #Database connection need dialect ssl option or not (e.g true/false)(default DB enable SSl options is true) 
 
 # JWT secret for signing tokens
 JWT_SECRET=  # JWT secret to create token for authentication
+JWT_TOKEN_EXPIRE_TIME= # JWT token expiry time in as it is format (1h, 12332)
